--- a/.github/workflows/build-lib-vlc.yml
+++ b/.github/workflows/build-lib-vlc.yml
@@ -109,13 +109,11 @@ jobs:
           echo "ANDROID_SDK=$ANDROID_HOME" >> $GITHUB_ENV
           echo "ANDROID_NDK=$ANDROID_NDK_ROOT" >> $GITHUB_ENV
           
-      - name: Build libvlc for all architectures
+      - name: Build libvlc for arm64-v8a architecture
         run: |
           cd "$GITHUB_WORKSPACE"/vlc-android
           
           echo "Current directory: $(pwd)"
-          echo "Directory structure:"
-          ls -la
           
           # 设置环境变量
           export ANDROID_SDK="$ANDROID_HOME"
@@ -123,7 +121,6 @@ jobs:
           
           echo "ANDROID_SDK: $ANDROID_SDK"
           echo "ANDROID_NDK: $ANDROID_NDK"
-          echo "PATH: $PATH"
           
           # 检查 buildsystem 目录和脚本
           echo "Checking buildsystem directory..."
@@ -144,102 +141,189 @@ jobs:
           fi
           
           # 根据 README 和 compile.sh，构建 libVLC 使用 -l 参数
-          # 使用 -a all 构建所有架构
+          # 使用 -a arm64-v8a 构建 arm64 架构
           # 使用 -t 尝试使用预构建的 contribs（加速构建）
           # 使用 -r 构建 release 版本
           
-          echo "Starting libVLC build..."
-          echo "This may take a while (30+ minutes)..."
+          echo "Starting libVLC build for arm64-v8a..."
+          echo "This may take a while (15-20 minutes)..."
           
-          # 构建所有架构的 libVLC
-          # 注意：构建过程会下载 VLC 源代码和依赖，需要网络连接
-          # 使用完整的路径调用脚本
-          ./buildsystem/compile.sh -l -a all -t -r
+          # 构建 arm64-v8a 架构的 libVLC
+          ./buildsystem/compile.sh -l -a arm64-v8a -t -r
           
-          echo "Build completed!"
+          echo "arm64-v8a build completed!"
           
-          # 检查构建结果
-          echo "Checking build results..."
-          find . -name "*.aar" -type f 2>/dev/null | head -10
-          find . -name "*.so" -type f 2>/dev/null | head -10
+          # 备份 arm64-v8a 的构建结果
+          echo "Backing up arm64-v8a build artifacts..."
+          mkdir -p "$GITHUB_WORKSPACE/build_artifacts/arm64-v8a"
           
-      - name: Find and copy generated aar files
+          # 查找并复制 AAR 文件
+          find . -name "*.aar" -type f 2>/dev/null | head -5 | while read file; do
+            echo "Found AAR for arm64-v8a: $file"
+            cp "$file" "$GITHUB_WORKSPACE/build_artifacts/arm64-v8a/"
+          done
+          
+          # 查找并复制 so 文件
+          find . -name "*.so" -type f 2>/dev/null | head -10 | while read file; do
+            echo "Found .so for arm64-v8a: $file"
+            # 提取架构信息
+            arch=$(echo "$file" | grep -o "arm64-v8a\|armeabi-v7a\|x86\|x86_64" || echo "unknown")
+            mkdir -p "$GITHUB_WORKSPACE/build_artifacts/libs/$arch"
+            cp "$file" "$GITHUB_WORKSPACE/build_artifacts/libs/$arch/"
+          done
+          
+      - name: Clean intermediate build files
         run: |
           cd "$GITHUB_WORKSPACE"/vlc-android
           
-          echo "Searching for generated AAR files..."
+          echo "Cleaning intermediate build files for next architecture..."
+          
+          # 清理一些中间文件，但保留下载的依赖
+          # 这样可以加快第二个架构的构建
+          if [ -d "libvlcjni/libvlc/build" ]; then
+            echo "Cleaning libvlc build directory..."
+            rm -rf libvlcjni/libvlc/build/outputs
+            rm -rf libvlcjni/libvlc/build/intermediates
+          fi
+          
+          if [ -d "libvlcjni/vlc/build-android-" ]; then
+            echo "Cleaning vlc build directories..."
+            rm -rf libvlcjni/vlc/build-android-*
+          fi
+          
+      - name: Build libvlc for armeabi-v7a architecture
+        run: |
+          cd "$GITHUB_WORKSPACE"/vlc-android
+          
           echo "Current directory: $(pwd)"
           
-          # 根据项目结构，AAR 文件可能在这些位置
-          # 根据 settings.gradle 文件，libvlc 模块在 libvlcjni:libvlc
-          POSSIBLE_PATHS=(
-            "libvlcjni/libvlc/build/outputs/aar"
-            "libvlc/build/outputs/aar"
-            "build/outputs/aar"
-            "."
-          )
+          # 设置环境变量
+          export ANDROID_SDK="$ANDROID_HOME"
+          export ANDROID_NDK="$ANDROID_NDK_ROOT"
           
-          AAR_FOUND=false
+          echo "ANDROID_SDK: $ANDROID_SDK"
+          echo "ANDROID_NDK: $ANDROID_NDK"
           
-          for path in "${POSSIBLE_PATHS[@]}"; do
-            if [ -d "$path" ]; then
-              echo "Checking $path..."
-              find "$path" -name "*.aar" -type f 2>/dev/null | while read file; do
-                echo "Found AAR: $file"
-                
-                # 检查是否是 release 版本
-                if [[ "$file" == *"release"* ]] || [[ "$file" == *"Release"* ]]; then
-                  echo "This appears to be a release AAR: $file"
-                  cp "$file" "$GITHUB_WORKSPACE/libvlc-release.aar"
-                  echo "Copied to: $GITHUB_WORKSPACE/libvlc-release.aar"
-                  AAR_FOUND=true
-                fi
-              done
-            fi
+          # 根据 README 和 compile.sh，构建 libVLC 使用 -l 参数
+          # 使用 -a armeabi-v7a 构建 arm 架构
+          # 使用 -t 尝试使用预构建的 contribs（加速构建）
+          # 使用 -r 构建 release 版本
+          
+          echo "Starting libVLC build for armeabi-v7a..."
+          echo "This may take a while (15-20 minutes)..."
+          
+          # 构建 armeabi-v7a 架构的 libVLC
+          ./buildsystem/compile.sh -l -a armeabi-v7a -t -r
+          
+          echo "armeabi-v7a build completed!"
+          
+          # 备份 armeabi-v7a 的构建结果
+          echo "Backing up armeabi-v7a build artifacts..."
+          mkdir -p "$GITHUB_WORKSPACE/build_artifacts/armeabi-v7a"
+          
+          # 查找并复制 AAR 文件
+          find . -name "*.aar" -type f 2>/dev/null | head -5 | while read file; do
+            echo "Found AAR for armeabi-v7a: $file"
+            cp "$file" "$GITHUB_WORKSPACE/build_artifacts/armeabi-v7a/"
           done
           
-          # 如果没有找到 release AAR，取第一个找到的
-          if [ "$AAR_FOUND" = false ]; then
-            echo "No release AAR found, searching for any AAR file..."
-            find . -name "*.aar" -type f 2>/dev/null | head -10 | while read file; do
-              echo "Found AAR: $file"
-              if [ ! -f "$GITHUB_WORKSPACE/libvlc-release.aar" ]; then
-                cp "$file" "$GITHUB_WORKSPACE/libvlc-release.aar"
-                echo "Copied to: $GITHUB_WORKSPACE/libvlc-release.aar"
-                AAR_FOUND=true
-              fi
-            done
+          # 查找并复制 so 文件
+          find . -name "*.so" -type f 2>/dev/null | head -10 | while read file; do
+            echo "Found .so for armeabi-v7a: $file"
+            # 提取架构信息
+            arch=$(echo "$file" | grep -o "arm64-v8a\|armeabi-v7a\|x86\|x86_64" || echo "unknown")
+            mkdir -p "$GITHUB_WORKSPACE/build_artifacts/libs/$arch"
+            cp "$file" "$GITHUB_WORKSPACE/build_artifacts/libs/$arch/"
+          done
+          
+      - name: Merge multi-architecture AAR
+        run: |
+          cd "$GITHUB_WORKSPACE"
+          
+          echo "Merging multi-architecture AAR files..."
+          
+          # 首先找到最新的 AAR 文件（应该是 armeabi-v7a 构建的）
+          if [ -d "build_artifacts/armeabi-v7a" ]; then
+            LATEST_AAR=$(find build_artifacts/armeabi-v7a -name "*.aar" -type f 2>/dev/null | head -1)
+          elif [ -d "build_artifacts/arm64-v8a" ]; then
+            LATEST_AAR=$(find build_artifacts/arm64-v8a -name "*.aar" -type f 2>/dev/null | head -1)
+          else
+            echo "✗ Error: No AAR files found in build artifacts"
+            exit 1
           fi
           
-          # 如果还没有找到，尝试查找 libvlcjni 目录
-          if [ "$AAR_FOUND" = false ] && [ -d "libvlcjni" ]; then
-            echo "Checking libvlcjni directory..."
-            find libvlcjni -name "*.aar" -type f 2>/dev/null | head -10 | while read file; do
-              echo "Found AAR in libvlcjni: $file"
-              cp "$file" "$GITHUB_WORKSPACE/libvlc-release.aar"
-              echo "Copied to: $GITHUB_WORKSPACE/libvlc-release.aar"
-              AAR_FOUND=true
-            done
+          if [ -n "$LATEST_AAR" ] && [ -f "$LATEST_AAR" ]; then
+            echo "Found base AAR: $LATEST_AAR"
+            
+            # 创建临时目录
+            TEMP_DIR=$(mktemp -d)
+            echo "Using temp directory: $TEMP_DIR"
+            
+            # 解压基础 AAR
+            echo "Extracting base AAR..."
+            unzip -q "$LATEST_AAR" -d "$TEMP_DIR"
+            
+            # 确保 jni 目录存在
+            mkdir -p "$TEMP_DIR/jni"
+            
+            # 复制 arm64-v8a 的 so 文件
+            if [ -d "build_artifacts/libs/arm64-v8a" ]; then
+              echo "Copying arm64-v8a libraries..."
+              mkdir -p "$TEMP_DIR/jni/arm64-v8a"
+              cp build_artifacts/libs/arm64-v8a/*.so "$TEMP_DIR/jni/arm64-v8a/" 2>/dev/null || true
+            fi
+            
+            # 复制 armeabi-v7a 的 so 文件
+            if [ -d "build_artifacts/libs/armeabi-v7a" ]; then
+              echo "Copying armeabi-v7a libraries..."
+              mkdir -p "$TEMP_DIR/jni/armeabi-v7a"
+              cp build_artifacts/libs/armeabi-v7a/*.so "$TEMP_DIR/jni/armeabi-v7a/" 2>/dev/null || true
+            fi
+            
+            # 创建合并后的 AAR
+            echo "Creating merged AAR..."
+            cd "$TEMP_DIR"
+            zip -qr "$GITHUB_WORKSPACE/libvlc-release.aar" .
+            
+            echo "Merged AAR created: $GITHUB_WORKSPACE/libvlc-release.aar"
+            
+            # 清理临时目录
+            rm -rf "$TEMP_DIR"
+          else
+            echo "✗ Error: Could not find a valid AAR file to use as base"
+            exit 1
           fi
           
-      - name: Verify aar file
+      - name: Verify multi-architecture aar file
         run: |
           cd "$GITHUB_WORKSPACE"
           
           if [ -f "libvlc-release.aar" ]; then
-            echo "✓ AAR file found and verified"
+            echo "✓ Multi-architecture AAR file found and verified"
             echo "File size: $(du -h libvlc-release.aar | cut -f1)"
             echo "File type:"
             file libvlc-release.aar
             
             # 检查 AAR 文件内容
-            echo "AAR contents (first 20 lines):"
-            unzip -l libvlc-release.aar | head -20
+            echo "AAR contents (first 30 lines):"
+            unzip -l libvlc-release.aar | head -30
             
             # 检查是否包含原生库
             echo "Checking for native libraries..."
             if unzip -l libvlc-release.aar | grep -q "\.so$"; then
               echo "✓ AAR contains native libraries (.so files)"
+              # 显示包含的架构
+              echo "Architectures found in AAR:"
+              unzip -l libvlc-release.aar | grep "\.so$" | sed 's/.*\/jni\/\([^/]*\)\/.*/\1/' | sort | uniq
+              
+              # 统计每个架构的 so 文件数量
+              echo "Number of .so files per architecture:"
+              for arch in arm64-v8a armeabi-v7a x86 x86_64; do
+                count=$(unzip -l libvlc-release.aar | grep -c "jni/$arch/.*\.so$" || true)
+                if [ "$count" -gt 0 ]; then
+                  echo "  $arch: $count files"
+                fi
+              done
             else
               echo "⚠ AAR does not contain native libraries"
             fi
@@ -249,17 +333,27 @@ jobs:
             if unzip -l libvlc-release.aar | grep -q "AndroidManifest.xml"; then
               echo "✓ AAR contains AndroidManifest.xml"
             fi
+            
+            # 检查 classes.jar
+            echo "Checking for classes.jar..."
+            if unzip -l libvlc-release.aar | grep -q "classes.jar"; then
+              echo "✓ AAR contains classes.jar"
+            fi
           else
             echo "✗ Error: No AAR file found at $GITHUB_WORKSPACE/libvlc-release.aar"
             
             # 输出一些调试信息
-            echo "Listing build artifacts in vlc-android directory:"
-            find "$GITHUB_WORKSPACE/vlc-android" -name "*.aar" -o -name "*.apk" -o -name "*.jar" -o -name "*.so" -type f 2>/dev/null | head -30
+            echo "Listing build artifacts:"
+            find "$GITHUB_WORKSPACE/build_artifacts" -type f 2>/dev/null | head -30
             
-            # 查看目录结构
-            echo "Directory structure of vlc-android:"
-            cd "$GITHUB_WORKSPACE/vlc-android"
-            find . -maxdepth 3 -type d | sort
+            # 检查各个架构的构建结果
+            echo "Checking individual architecture builds:"
+            for arch in arm64-v8a armeabi-v7a; do
+              if [ -d "$GITHUB_WORKSPACE/build_artifacts/$arch" ]; then
+                echo "  $arch:"
+                ls -la "$GITHUB_WORKSPACE/build_artifacts/$arch/" 2>/dev/null || echo "    No files"
+              fi
+            done
             
             exit 1
           fi
@@ -333,10 +427,10 @@ jobs:
       #       if git diff --cached --quiet; then
       #         echo "No changes to commit."
       #       else
-      #         git commit -m "Update VLC AAR - ${{ env.BUILD_DATE }} [CI]"
+      #         git commit -m "Update VLC AAR (multi-arch: arm64+v7a) - ${{ env.BUILD_DATE }} [CI]"
       #         echo "Pushing to remote repository..."
       #         git push origin main
-      #         echo "✓ Successfully pushed VLC AAR to ${{ env.TARGET_REPO }}"
+      #         echo "✓ Successfully pushed multi-architecture VLC AAR to ${{ env.TARGET_REPO }}"
       #       fi
       #     else
       #       echo "✗ Error: AAR file not found at $SOURCE_AAR"
