--- a/.github/workflows/build-lib-vlc-simple.yml
+++ b/.github/workflows/build-lib-vlc-simple.yml
@@ -1,27 +1,44 @@
 name: build-lib-vlc-simple
 
 on:
-  push:
-    branches: [ libvlc-3.6.5 ]
-  pull_request:
-    branches: [ libvlc-3.6.5 ]
-  workflow_dispatch:
+  workflow_dispatch:  # 只支持手动触发，因为CI不在源仓库中
+    inputs:
+      source_branch:
+        description: 'Source repository branch to build'
+        required: true
+        default: 'libvlc-3.6.5'
+        type: string
+      tag_name:
+        description: 'Tag name for the release'
+        required: true
+        default: 'libvlc-v3.6.5'
+        type: string
 
 env:
   ANDROID_SDK_ROOT: /usr/local/lib/android/sdk
   ANDROID_NDK_ROOT: /usr/local/lib/android/sdk/ndk/25.2.9519653
   GRADLE_VERSION: 8.13
+  SOURCE_REPO: https://github.com/videolan/vlc-android.git
 
 jobs:
   Build:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Checkout code
+    - name: Checkout ci repository
       uses: actions/checkout@v4
-      with:
-        ref: libvlc-3.6.5
-        submodules: recursive
+    
+    - name: Clone source repository
+      run: |
+        echo "Cloning source repository: ${{ env.SOURCE_REPO }}"
+        echo "Branch: ${{ github.event.inputs.source_branch }}"
+        
+        git clone --depth 1 --branch "${{ github.event.inputs.source_branch }}" \
+          "${{ env.SOURCE_REPO }}" vlc-android-source
+        
+        echo "Source repository cloned successfully"
+        echo "Source directory size:"
+        du -sh vlc-android-source/
     
     - name: Setup java
       uses: actions/setup-java@v4
@@ -66,13 +83,15 @@ jobs:
       with:
         gradle-version: ${{ env.GRADLE_VERSION }}
     
-    - name: Configure local properties
+    - name: Configure build environment
       run: |
+        cd vlc-android-source
+        
+        # 创建local.properties文件
         echo "sdk.dir=$ANDROID_SDK_ROOT" > local.properties
         echo "android.ndkPath=$ANDROID_NDK_ROOT" >> local.properties
-    
-    - name: Create gradle properties
-      run: |
+        
+        # 创建gradle.properties文件
         echo "android.enableJetifier=true" > gradle.properties
         echo "android.useAndroidX=true" >> gradle.properties
         echo "kapt.incremental.apt=true" >> gradle.properties
@@ -81,14 +100,17 @@ jobs:
         echo "keyStoreFile=$HOME/.android/debug.keystore" >> gradle.properties
         echo "storealias=androiddebugkey" >> gradle.properties
         echo "storepwd=android" >> gradle.properties
-    
-    - name: Initialize gradle wrapper
-      run: |
-        chmod +x gradlew || true
+        
+        # 初始化gradle wrapper
+        chmod +x gradlew 2>/dev/null || true
         ./gradlew wrapper --gradle-version=$GRADLE_VERSION || echo "Gradle wrapper initialized"
+        
+        echo "Build environment configured"
     
     - name: Build libvlc for arm64
       run: |
+        cd vlc-android-source
+        
         export ANDROID_SDK="$ANDROID_SDK_ROOT"
         export ANDROID_NDK="$ANDROID_NDK_ROOT"
         export PATH="$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$PATH"
@@ -99,7 +121,7 @@ jobs:
         chmod +x buildsystem/compile.sh
         ./buildsystem/compile.sh -l -a arm64 --release
         
-        # 查找生成的aar文件（release版本）
+        # 查找生成的aar文件
         echo "Looking for release AAR files..."
         
         # 在libvlc模块的输出目录中查找
@@ -107,48 +129,47 @@ jobs:
           echo "Checking libvlcjni/libvlc/build/outputs/aar directory..."
           find libvlcjni/libvlc/build/outputs/aar -name "*.aar" -type f
           
-          # 优先查找release版本
+          # 查找release版本
           AAR_FILE=$(find libvlcjni/libvlc/build/outputs/aar -name "*release*.aar" -type f | head -1)
           if [ -z "$AAR_FILE" ]; then
-            # 如果没有release字样，取第一个aar文件
             AAR_FILE=$(find libvlcjni/libvlc/build/outputs/aar -name "*.aar" -type f | head -1)
           fi
         else
-          echo "libvlcjni/libvlc/build/outputs/aar directory not found, searching in whole project..."
-          AAR_FILE=$(find . -name "*.aar" -type f | grep -E "(release|Release)" | head -1)
-          if [ -z "$AAR_FILE" ]; then
-            AAR_FILE=$(find . -name "*.aar" -type f | head -1)
-          fi
+          echo "Searching in whole project..."
+          AAR_FILE=$(find . -name "*.aar" -type f | head -1)
         fi
         
         if [ -n "$AAR_FILE" ]; then
           echo "Found AAR: $AAR_FILE"
-          mv "$AAR_FILE" "libvlc-arm64-release.aar"
+          cp "$AAR_FILE" ../libvlc-arm64-release.aar
+          echo "Copied AAR to workspace root"
         else
           echo "ERROR: No AAR file found for arm64 build!"
           exit 1
         fi
         
         # 复制构建的so文件（可选）
-        mkdir -p build-output/arm64
-        find . -name "*.so" -type f -path "*/arm64*" -exec cp {} build-output/arm64/ \; 2>/dev/null || true
+        mkdir -p ../build-output/arm64
+        find . -name "*.so" -type f -path "*/arm64*" -exec cp {} ../build-output/arm64/ \; 2>/dev/null || true
     
     - name: Build libvlc for arm
       run: |
+        cd vlc-android-source
+        
         export ANDROID_SDK="$ANDROID_SDK_ROOT"
         export ANDROID_NDK="$ANDROID_NDK_ROOT"
         export PATH="$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$PATH"
         
         echo "Building for ABI: armeabi-v7a, ARCH: arm with release configuration"
         
-        # 清理之前的构建，确保重新构建（可选）
+        # 清理之前的构建，确保重新构建
         rm -rf libvlcjni/libvlc/build/outputs/aar/*.aar 2>/dev/null || true
         
         # 构建libvlc，使用release模式
         chmod +x buildsystem/compile.sh
         ./buildsystem/compile.sh -l -a arm --release
         
-        # 查找生成的aar文件（release版本）
+        # 查找生成的aar文件
         echo "Looking for release AAR files..."
         
         # 在libvlc模块的输出目录中查找
@@ -156,31 +177,28 @@ jobs:
           echo "Checking libvlcjni/libvlc/build/outputs/aar directory..."
           find libvlcjni/libvlc/build/outputs/aar -name "*.aar" -type f
           
-          # 优先查找release版本
+          # 查找release版本
           AAR_FILE=$(find libvlcjni/libvlc/build/outputs/aar -name "*release*.aar" -type f | head -1)
           if [ -z "$AAR_FILE" ]; then
-            # 如果没有release字样，取第一个aar文件
             AAR_FILE=$(find libvlcjni/libvlc/build/outputs/aar -name "*.aar" -type f | head -1)
           fi
         else
-          echo "libvlcjni/libvlc/build/outputs/aar directory not found, searching in whole project..."
-          AAR_FILE=$(find . -name "*.aar" -type f | grep -E "(release|Release)" | head -1)
-          if [ -z "$AAR_FILE" ]; then
-            AAR_FILE=$(find . -name "*.aar" -type f | head -1)
-          fi
+          echo "Searching in whole project..."
+          AAR_FILE=$(find . -name "*.aar" -type f | head -1)
         fi
         
         if [ -n "$AAR_FILE" ]; then
           echo "Found AAR: $AAR_FILE"
-          mv "$AAR_FILE" "libvlc-arm-release.aar"
+          cp "$AAR_FILE" ../libvlc-arm-release.aar
+          echo "Copied AAR to workspace root"
         else
           echo "ERROR: No AAR file found for arm build!"
           exit 1
         fi
         
         # 复制构建的so文件（可选）
-        mkdir -p build-output/arm
-        find . -name "*.so" -type f -path "*/armeabi-v7a*" -exec cp {} build-output/arm/ \; 2>/dev/null || true
+        mkdir -p ../build-output/arm
+        find . -name "*.so" -type f -path "*/armeabi-v7a*" -exec cp {} ../build-output/arm/ \; 2>/dev/null || true
     
     - name: Merge multi abi aar
       run: |
@@ -242,11 +260,22 @@ jobs:
         ls -lh libvlc-release.aar
         
         # 验证内容
-        echo "Checking contents of merged AAR (JNI libraries):"
+        echo "Checking AAR contents:"
         unzip -l libvlc-release.aar | grep "\.so$" || echo "No .so files found"
         
-        echo "Checking for AndroidManifest.xml and classes.jar:"
-        unzip -l libvlc-release.aar | grep -E "(AndroidManifest\.xml|classes\.jar)" || echo "Required files not found"
+        # 验证架构
+        echo "Verifying architectures in AAR:"
+        if unzip -l libvlc-release.aar | grep -q "arm64-v8a"; then
+          echo "✓ ARM64 (arm64-v8a) architecture found"
+        else
+          echo "✗ ARM64 architecture not found"
+        fi
+        
+        if unzip -l libvlc-release.aar | grep -q "armeabi-v7a"; then
+          echo "✓ ARMv7 (armeabi-v7a) architecture found"
+        else
+          echo "✗ ARMv7 architecture not found"
+        fi
     
     - name: Upload build artifacts
       uses: actions/upload-artifact@v4
@@ -259,24 +288,24 @@ jobs:
         retention-days: 30
     
     - name: Create release
-      if: github.event_name == 'push' && github.ref == 'refs/heads/libvlc-3.6.5'
       uses: softprops/action-gh-release@v1
       with:
         files: |
           libvlc-release.aar
-        tag_name: libvlc-v3.6.5-$(date +'%Y%m%d-%H%M%S')
-        name: LibVLC 3.6.5 Release Build
+        tag_name: ${{ github.event.inputs.tag_name }}-$(date +'%Y%m%d-%H%M%S')
+        name: LibVLC Release Build - ${{ github.event.inputs.source_branch }}
         body: |
-          # LibVLC 3.6.5 Multi-ABI Release Build
+          # LibVLC Release Build
           
           This release contains a merged AAR file with both ARM architectures:
           - ARM64 (arm64-v8a)
           - ARMv7 (armeabi-v7a)
           
           ## Build Information
-          - Branch: ${{ github.ref }}
-          - Commit: ${{ github.sha }}
+          - Source Repository: ${{ env.SOURCE_REPO }}
+          - Source Branch: ${{ github.event.inputs.source_branch }}
           - Build Date: $(date -u '+%Y-%m-%d %H:%M:%S UTC')
+          - CI Run ID: ${{ github.run_id }}
           
           ## Usage
           
@@ -304,7 +333,7 @@ jobs:
           
           ## AAR Contents
           
-          This AAR contains the following JNI libraries:
+          This AAR contains the following JNI libraries for both architectures:
           - libvlc.so (VLC core library)
           - libvlcjni.so (JNI bindings)
           - Other required VLC dependencies
@@ -312,5 +341,11 @@ jobs:
           ## License
           
           This build is licensed under the LGPLv2.1 license.
+          
+          ## Source
+          
+          Built from the official VLC Android repository:
+          - Repository: ${{ env.SOURCE_REPO }}
+          - Branch: ${{ github.event.inputs.source_branch }}
         draft: false
         prerelease: false
